[package]
name = "shared"
version = "0.1.0"
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = [ "derive" ] }
serde_json = "1.0.41"
tokio = { version = "0.2.0-alpha.6" }
bytes = "0.4.12"
